feature:added vercel.json

--- a/project/About.html
+++ b/project/About.html
@@ -41,7 +41,7 @@
      <div class="textcontent">
          <h3>We Are Feane
      </h3>
-     <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All
+    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humor, or randomized words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to ensure there isn't anything embarrassing hidden in the middle of the text. All passages are checked for errors and corrected to maintain readability and professionalism.</p>
      </p>
      <button class="readmorebtn"><a href="#">Read More</a></button>
    </div>
@@ -84,7 +84,8 @@
        <div class="div">
        <div class="lastdiv">
          <p>© 2025 All Rights Reserved By Free Html Templates</p>
-         <p class="bigb">© Distributed By ThemeWagon</b>
+         <p class="bigb">© Distributed By ThemeWagon</p>
+         
        </div>
        </div>
 </body>
